/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-02-11 11:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/tip/url.prg
    ! fixed regular expression to Classdata cREServ to allow use of
      UserID format <user@domain.com> on pop/smtp protocol.
    * added call to Buildaddres() method from SetAddress() method.

2012-02-11 03:25 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  ! source/rtl/hbwinole.c
    ! fixed handling DATETIME values (bug report by Rick Lipkin)

2012-02-10 02:25 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  ! source/vm/hvm.c
    ! fixed the comparison logic related to DATETIME values
      ( <, >, <=, >=, =, ==, != )

2012-02-09 13:00 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * source/rtl/zlib/Makefile
    ! updated due depencendie changes
    
2012-02-09 07:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  ! include/hbdate.h
    + definition of HB_TIMEDIFF_DEC (borrowed from Harbour )
  ! source/vm/hvm.c
    ! fixed bug on substraction related to DATETIME value

2012-02-07 13:30 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * source/rtl/pcre/Makefile
    ! updated due depencendie changes
    
2012-02-05 03:40 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h
  * source/rtl/pcre/pcre.h.generic
  * source/rtl/pcre/pcreposix.c
  * source/rtl/pcre/pcreposix.h
  * source/rtl/pcre/pcre_chartables.c
  * source/rtl/pcre/pcre_chartables.c.dist
  * source/rtl/pcre/pcre_compile.c
  * source/rtl/pcre/pcre_config.c
  * source/rtl/pcre/pcre_dfa_exec.c
  * source/rtl/pcre/pcre_exec.c
  * source/rtl/pcre/pcre_fullinfo.c
  * source/rtl/pcre/pcre_get.c
  * source/rtl/pcre/pcre_globals.c
  * source/rtl/pcre/pcre_internal.h
  * source/rtl/pcre/pcre_maketables.c