@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-02-12 20:00 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
+  ! source/rtl/zlib/gzlib.c
+  ! source/rtl/zlib/gzwrite.c
+  ! source/rtl/zlib/gzread.c
+    ! protected include of io.h with __TURBOC__ otherwise dont compile on *nix
+  
 2012-02-11 11:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * source/tip/url.prg
     ! fixed regular expression to Classdata cREServ to allow use of
